--- a/SimpleWord/app/src/main/AndroidManifest.xml
+++ b/SimpleWord/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="simpleword.aca.com">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
